# xclibs

udbus/: Setup.hs
xch-rpc/Rpc/: Remote.hs  Types.hs
xchdb/: xchdb.cabal
